--- a/home.css
+++ b/home.css
@@ -1,69 +1,67 @@
 *  {
-    box-sizing: border-box;
-    margin: auto;
-    padding: 10px;
-    font-family: 'Kumbh Sans' , sans-serif;
-    scroll-behavior: smooth;
-    color:#61c192;
-  }
+  box-sizing: border-box;
+  margin: auto;
+  padding: 10px;
+  font-family: 'Kumbh Sans' , sans-serif;
+  scroll-behavior: smooth;
+  color:#61c192;
+}
 
 .nuvra {
-    display: flex;
-    font-size: 60px;
-    text-align: center;
-    background: -webkit-linear-gradient(to right, #12c2e9, #c471ed, #f64f59); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #12c2e9 0%, #c471ed 50%, #f64f59 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent; 
-    
-  }
-
-  .background {
-    background: #000000;
-    background: linear-gradient(to right, #161616, #000000);
-    padding: 200px 0;
+  display: flex;
+  font-size: 60px;
   text-align: center;
+  background: -webkit-linear-gradient(to right, #12c2e9, #c471ed, #f64f59); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #12c2e9 0%, #c471ed 50%, #f64f59 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent; 
+  
+}
+
+.background {
+  background: #000000;
+  background: linear-gradient(to right, #161616, #000000);
+  padding: 200px 0;
 }
 
 
 #bottomtext {
-  color: white;
-  font-size: 20px;
-  align-self: center;
+color: white;
+font-size: 20px;
+align-self: center;
 }
+
 .tooltip {
-  position: static;
-  display: inline-block;
-  margin-bottom: 0;
-  
+position: relative;
+display: inline-block;
+margin-bottom: 20px;
+
 }
 
 .tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
-  top: 100%;
-  left: 50%;
-  margin-left: -60px;
+visibility: hidden;
+width: 120px;
+background-color: black;
+color: #fff;
+text-align: center;
+border-radius: 6px;
+padding: 5px 0;
+position: absolute;
+z-index: 1;
+top: 100%;
+left: 50%;
+margin-left: -60px;
 }
 
 .tooltip:hover .tooltiptext {
-  visibility: visible;
+visibility: visible;
 }
 body {
-	font-family:  Arial, Helvetica, sans-serif;
-	background-color: #000000;
-	color: #fff;
-	line-height: 1.6;
-	
+font-family:  Arial, Helvetica, sans-serif;
+background-color: #000000;
+color: #fff;
+line-height: 1.6;
+
 }
