--- a/home.css
+++ b/home.css
@@ -9,21 +9,23 @@
 
 .nuvra {
   display: flex;
-  font-size: 60px;
-  text-align: center;
+  font-size: 100px;
   background: -webkit-linear-gradient(to right, #12c2e9, #c471ed, #f64f59); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #12c2e9 0%, #c471ed 50%, #f64f59 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent; 
+  text-align: right;
+  padding:50px;
   
 }
 
 .background {
   background: #000000;
-  background: linear-gradient(to right, #161616, #000000);
-  padding: 200px 0;
+  background: linear-gradient(to right, #000000, #000000);
+  padding: 0px 0;
+  text-align: center;
 }
 
 
