--- a/home.css
+++ b/home.css
@@ -4,7 +4,7 @@
   padding: 10px;
   font-family: 'Kumbh Sans' , sans-serif;
   scroll-behavior: smooth;
-  color: #12c2e9;
+  color:#61c192;
 }
 
 .nuvra {
@@ -39,7 +39,7 @@ align-self: center;
 .tooltip {
 position: relative;
 display: inline-block;
-margin-bottom: 0px;
+margin-bottom: 20px;
 
 }
 
@@ -50,7 +50,7 @@ background-color: black;
 color: #fff;
 text-align: center;
 border-radius: 6px;
-padding: 0px 0;
+padding: 5px 0;
 position: absolute;
 z-index: 1;
 top: 100%;
@@ -66,61 +66,5 @@ font-family:  Arial, Helvetica, sans-serif;
 background-color: #000000;
 color: #fff;
 line-height: 1.6;
-
-}
-.left1 { float:right; padding-right: 65px ;}
-.left {  padding-right: 130px  }
-.right {  padding-left: 55px;}
-.right1 {  padding-right: 130px  }
-.nuvra { padding-left: 600px}
-
-p { color:#000000;
-    font-size: 0px;
-    }
-    .photos-list ul,
-.videos-list ul {
-margin: 0px;
-padding: 0px;
-}
-
-.photos-list ul li,
-.videos-list ul li {
-list-style: none;
-float: right;
-width: 13%;
-margin: 3px;
-position: relative;
-}
-
-.photos-list ul li img,
-.videos-list ul li img {
-width: 100%;
-border-radius: 10px;
-height: 110px;
-}
-
-.photos-list ul li span,
-.videos-list ul li span {
-position: relative;
-bottom: 0;
-right: 0;
-background: rgba(0, 0, 0, .5);
-padding: 25px 15px;
-cursor: pointer;
-}
-
-.photos-list ul li span svg,
-.videos-list ul li span svg {
-color: #000000;
-}
-
-.hidden {
-display: none;
-}
-.centerize {
-
-margin: 0 auto;
-text-align: center;
--webkit-text-fill-color: #000000;
 
 }
